@@ -623,6 +623,17 @@ int initGUI(void)
 	}
 	screen_params[2] = 32;
 
+	// blackosx - This solved an issue when the theme.plist had blank values for screen_height and screen_width.
+	// Thanks to Al Schar for pointing out Conti's fix and thanks to Conti for the fix.
+	/* Fix for "Memory allocation error! Addr=0xdeadbeef, Size=0x0" - if no VESA resolution defined in com.apple.Boot.plist */
+	
+	if(!screen_params[0]) {
+		screen_params[0] = DEFAULT_SCREEN_WIDTH;
+		screen_params[1] = DEFAULT_SCREEN_HEIGHT;
+	}
+	
+	/* End Fix ~ Conti */	
+
 	// Initalizing GUI strucutre.
 	bzero(&gui, sizeof(gui_t));
 	
@@ -793,9 +804,12 @@ void drawDeviceList (int start, int end, int selection)
 			dprintf( &gui.screen, "modtime   %d\n",   param->modTime );
 #endif
 		}
-		
-		drawDeviceIcon( param, gui.devicelist.pixmap, p, false ); //blackosx - added false to draw normal icon if it's not selected.
-		
+		else if (rolloverfail ==false)
+			drawDeviceIcon( param, gui.devicelist.pixmap, p, false ); //blackosx - draw non-highlighted normal device icon 
+			
+		if (rolloverfail == true) // blackosx - draw the device icon on top of the device_selection only if we're not using rollover image.
+			drawDeviceIcon( param, gui.devicelist.pixmap, p, false ); //blackosx - added false to draw normal icon if it's not selected.
+
 		if (gui.layout == HorizontalLayout)
 		{
 			p.x += images[iSelection].image->width + gui.devicelist.iconspacing; 
@@ -1741,17 +1755,23 @@ void drawBootGraphics(void)
 	}
 
 	// parse screen size parameters
+	// blackosx - Thanks to Al Schar for pointing out Conti's fix and thanks to Conti for the fix.
+	/* Fix for "Memory allocation error! Addr=0xdeadbeef, Size=0x0" - if no VESA resolution defined in com.apple.Boot.plist */
+	
 	if (getIntForKey("boot_width", &pos, &bootInfo->themeConfig)) {
 		screen_params[0] = pos;
-	} else {
-		screen_params[0] = DEFAULT_SCREEN_WIDTH;
 	}
 	if (getIntForKey("boot_height", &pos, &bootInfo->themeConfig)) {
 		screen_params[1] = pos;
-	} else {
-		screen_params[1] = DEFAULT_SCREEN_HEIGHT;
 	}
 	screen_params[2] = 32;
+	
+	if(!screen_params[0]) {
+		screen_params[0] = DEFAULT_SCREEN_WIDTH;
+		screen_params[1] = DEFAULT_SCREEN_HEIGHT;
+	}
+	
+	/* End Fix ~ Conti */
 
 	gui.screen.width = screen_params[0];
 	gui.screen.height = screen_params[1];
