@@ -1,1 +1,1 @@
-2.0-RC5 (blackosx_GUI_edit)
+2.0-RC5 (blackosx_GUI_editv2)
